--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,8 +1,16 @@
-html {
-    font-size: 22px;
+nav li{
+    font-size: 24px;
+    list-style: none;
+    display: inline;
+    margin-right: 25px;
 }
+nav li:hover{
+    background-color: gray;
+}
+ nav li a{
+    text-decoration: none;
+ }
 
-body {
-    background-color: 333;
-    color: rgb(0, 0, 0);
-}
+ footer, h1{
+    text-align: center;
+ }
