--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,8 @@
+main{
+    margin:150px;
+    text-align: center;
+}
+
 nav li{
     font-size: 24px;
     list-style: none;
@@ -11,6 +16,6 @@ nav li:hover{
     text-decoration: none;
  }
 
- footer, h1{
+ footer, h1, nav{
     text-align: center;
  }
